<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.scannertest.Excute" >

    <TextView
		android:id="@+id/Text_RecognizeCmd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/RecognizeCmd_Waiting" 
        android:layout_centerHorizontal="true"
        />

    <TextView
        android:id="@+id/Text_GetInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/progressbar_RecognizeCmd"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/GetInfo_Waiting" />
    
    <TextView
        android:id="@+id/Text_Excute"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/progressbar_GetInfo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/Excute_Waiting" />
    
    

    <ProgressBar
        android:id="@+id/progressbar_RecognizeCmd"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Text_RecognizeCmd"
        android:layout_centerHorizontal="true"
        android:max="100"
        android:progress="0" />

    <ProgressBar
        android:id="@+id/progressbar_GetInfo"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/progressbar_RecognizeCmd"
        android:layout_below="@+id/Text_GetInfo"
        android:max="100"
        android:progress="0" />
    
    <ProgressBar
        android:id="@+id/progressbar_Excute"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/progressbar_RecognizeCmd"
        android:layout_below="@+id/Text_Excute"
        android:max="100"
        android:progress="0" />

"

</RelativeLayout>
