<?xml version="1.0" encoding="utf-8"?>
	<!-- 该文件是OtherActivity.java文件所使用的布局文件 -->
		<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		    android:orientation="vertical"
		    android:layout_width="fill_parent"
		    android:layout_height="fill_parent"
	    >
	    
		<LinearLayout
	        android:focusable="true" 
	        android:focusableInTouchMode="true"
	        android:layout_width="0px"
	        android:layout_height="0px"
        />
		    
        <TextView android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textview_mac_addr"  
	        android:background="#000000"
	        android:textColor="#00ff00"            
            android:textSize="12sp"/>
        
        <TextView android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textview_char_uuid"
            android:background="#000000"
	        android:textColor="#00ff00"           
            android:textSize="12sp"/>
                            
	    
    	 	
        <Space android:layout_width="5dp"
            android:layout_height="wrap_content"/>
        
		<ScrollView 
			android:layout_weight="2"    
			android:layout_width="fill_parent"    
			android:layout_height="wrap_content"   
			android:background="#000000"
			android:textColorHint="#238745"        
			android:id="@+id/scroll"    
	    >            
	        <TextView android:id="@+id/device_address"
	            android:layout_weight= "2"  
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:textColorHint="#238745"  
				android:ellipsize="start"
				android:maxLines="10000"
				android:maxLength = "100000" 				
				android:scrollHorizontally="true"
				android:singleLine="false" 
				android:fadeScrollbars="false"				
				android:scrollbars="vertical"
	            android:textSize="16sp"     
	            android:textColor="#00ff00"
	            android:textStyle="bold"  
	            />
        
		</ScrollView>
	        
        <TextView
            android:id="@+id/textview_recive_send_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"                              
            android:textSize="16sp"
        />     
        
        <LinearLayout  
		    android:orientation="horizontal"      
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content" >
	        
	        <EditText  
		    android:id="@+id/edit_text"     
		    android:layout_width="280dp"    
		    android:layout_height="wrap_content"  
		    android:maxLength="200" 
		    android:textSize="20sp" 
		    android:hint="输入执行的命令"  
		    android:textColorHint="#238745"/>  
		    
	        <Button
       			android:id="@+id/button_Save"
        		android:layout_width="wrap_content"
        		android:layout_height="wrap_content"
        		android:text="Save" />
	        
        </LinearLayout>		
		
        
		
		
		   <LinearLayout  
		        android:orientation="horizontal"      
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content" >
		               
		        		        
			 	<Button  
			        android:id="@+id/button_send"  
			        android:layout_width="wrap_content"  
			        android:layout_height="wrap_content"
			        android:textSize="16sp"  
			        android:text="发送" 
			        android:textStyle="bold"      
			        android:layout_weight="1" 
			        />  
			    <Button
       				android:id="@+id/button_Com_scan"
        			android:layout_width="wrap_content"
        			android:layout_height="wrap_content"
        			android:text="扫一扫" />
			    <Button 
        			android:id="@+id/button_Com_excute"
        			android:layout_width="wrap_content"
        			android:layout_height="wrap_content"
        			android:text="@string/excute"/>
			    
			    <ToggleButton
        			android:id="@+id/toggleButton1"
        			android:layout_width="wrap_content"
        			android:layout_height="wrap_content"
        			android:layout_alignParentBottom="true"
        			android:layout_centerHorizontal="true"
        			android:checked="true"
        			android:text="ToggleButton" />
		    </LinearLayout>	
		    	
			<LinearLayout  
		        android:orientation="horizontal"      
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content" >
			    
			    <Button
			        android:id="@+id/button_Com_ClearAll"
			        android:layout_width="wrap_content"
        			android:layout_height="wrap_content"
        			android:text="@string/ClearAll"/>
			    
			</LinearLayout>
		

			
	    <TextView
	        android:id="@+id/WyDriverDemo_Info"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:background="#000000"
	        android:textColor="#ff00ff"
	        android:gravity="center"
	        android:textStyle="bold"      
	        android:text="@string/from_WyBHSF"     
	        android:textSize="16sp"/>
	        
		</LinearLayout>

		
		